--- a/main/index.html
+++ b/main/index.html
@@ -829,6 +829,7 @@
     }
   </style>
 </head>
+<script src="ac.js"></script>
 <script src="intelligent.js"></script>
 <body>
   <!-- Secret Support Access Button (Hidden from normal users) -->
